[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-enhancer"
version = "2.0.0"
dependencies = [
    "pedalboard>=0.9.8",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.hatch.build.targets.wheel.force-include]
"src/nexus" = "nexus"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
ignore_missing_imports = true
