[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-enhancer"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "pedalboard>=0.9.8",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.26.0"
]

# This is the modern uv standard for dev groups
[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
ignore_missing_imports = true
