[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-enhancer"
version = "2.0.0"
description = "An audio enhancement tool using pedalboard"
requires-python = ">=3.11"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "pedalboard>=0.9.8",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/engine", "src/models", "src/nexus"]
